fixing layout on mobile

--- a/ui/src/app/session-view/session-view.component.scss
+++ b/ui/src/app/session-view/session-view.component.scss
@@ -7,7 +7,9 @@
   height: 100%;
   padding-left: 60px;
   padding-right: 60px;
-  max-width: 100%;
+  max-width: 150%;
+  min-height: 800px;
+  min-width: 800px;
 }
 
 .language-dropdown {
